After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691567 - Table of contents not keyboard navigable.
Table of contents not keyboard navigable.
Status: RESOLVED FIXED
Product: gnome-documents
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME documents maintainer(s)
GNOME documents maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-01-11 16:47 UTC by António Fernandes
Modified: 2013-01-17 21:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description António Fernandes 2013-01-11 16:47:54 UTC
Steps to reproduce:

      Click F3 when viewing a document.
      Use arrow down/up key to navigate the table of contents.

Actual result:

      As soon as a different row is focused, the places dialog is closed unexpectedly.

Expected result:

      An explicit click on the 'Enter' or 'Return' key would be required in order to close the dialog, allowing the table of contents to be keyboard navigable.

Observation:

      Rigorously speaking, keyboard navigation works, but requires holding Ctrl key.
Comment 1 Cosimo Cecchi 2013-01-17 21:36:57 UTC
Pushed a fix for this to git master now, thanks for the report!