places-links: don't use selection changed signal to emit link-activated

Instead, explicitly listen for button-release events and row-activated
signals on the treeview. This makes both the dialog navigable with a
keyboard and avoids popping up the controls after the mouse button is
released, since the dialog was destroyed as soon as the mouse button was
pressed.

https://bugzilla.gnome.org/show_bug.cgi?id=691567